# Quake3e

./: .dockerignore  .gitignore  .gitmodules  .instructions.md  .mailmap  BUILD.md  CMakeLists.txt  Dockerfile  Makefile  Makefile.unix  README.md  README.xq3e.md  make-macosx-app.sh  make-macosx-ub2.sh  package-lock.json  package.json
code/: CMakeLists.txt
code/asm/: common_x64.asm  linux_asm.s  qasm.h  setjmp_x64.asm  snd_mix_mmx.s  snd_mix_sse.s  snd_mix_x64.asm  snd_mix_x86_64.s  win32_asm.asm  win32_snd.asm  win64_asm.asm
code/botlib/: CMakeLists.txt  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_routealt.c  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_char.h  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  be_ai_weap.c  be_ai_weap.h  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_ea.h  be_interface.c  (+16 more)
code/cgame/: cg_public.h
code/client/: CMakeLists.txt  cl_avi.c  cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_curl.h  cl_input.c  cl_jpeg.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_tc_vis.c  cl_ui.c  client.h  keycodes.h  keys.h  snd_adpcm.c  snd_codec.c  snd_codec.h  snd_codec_ogg.c  snd_codec_wav.c  snd_dma.c  snd_local.h  snd_main.c  snd_mem.c  snd_mix.c  snd_public.h  snd_wavelet.c  x_cl_console.c  x_console.c  x_crosshair.c  x_ddamage.c  x_gamestate.c  x_hud.c  x_hud.h  x_local.h  x_local2.h  (+8 more)
code/game/: bg_public.h  g_public.h
code/jpeg-8c/: CMakeLists.txt  jchuff.c  jconfig.h  jmemmgr.c
code/libcurl/: conf751.sh  conf840.sh
code/libjpeg/: jcarith.c  jchuff.c  jcmarker.c  jcmaster.c  jconfig.h  jdapimin.c  jdarith.c  jdatasrc.c  jdhuff.c  jdinput.c  jdmarker.c  jdsample.c  jerror.c  jidctfst.c  jidctint.c  jmemmgr.c  libjpeg-changes.diff
code/libpcre2/: build.sh  embed_msvc_debug_info.patch  mingw.sh  vs2017.sh
code/libpcre2/include/: pcre2.h
code/libsdl/macosx/: libSDL2-2.0.0.dylib
code/libvorbis/lib/: block.c  floor1.c  lsp.c  vorbisfile.c
code/null/: null_client.c  null_input.c  null_main.c  null_snddma.c
code/patches/: curl-7.28.1-win32.diff  curl-7.50.0.diff  curl-7.51.0.diff
code/qcommon/: CMakeLists.txt  cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  history.c  huffman.c  huffman_static.c  intreadwrite.h  keys.c  md4.c  md5.c  msg.c  net_chan.c  net_ip.c  puff.c  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  sizebuf.c  sizebuf.h  surfaceflags.h  unzip.c  unzip.h  vm.c  vm_aarch64.c  vm_armv7l.c  vm_interpreted.c  (+15 more)
code/renderer/: CMakeLists.txt  qgl.h  qgl_linked.h  tr_animation.c  tr_arb.c  tr_backend.c  tr_bloom.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_flares.c  tr_font.c  tr_image.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_png.c  tr_image_tga.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_noise.c  tr_public.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_types.h  tr_vbo.c  tr_world.c
code/renderer2/: CMakeLists.txt  qgl.h  stringify.c  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_dsa.h  tr_extensions.c  tr_extramath.c  tr_fbo.c  tr_fbo.h  tr_flares.c  tr_glsl.c  tr_image.c  tr_image_dds.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_postprocess.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_vbo.c  tr_world.c
code/renderer2/glsl/: bokeh_fp.glsl  calclevels4x_fp.glsl  dlight_fp.glsl  dlight_vp.glsl  down4x_fp.glsl  generic_fp.glsl  generic_vp.glsl  lightall_fp.glsl  (+6 more)
code/renderercommon/: tr_font.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_tga.c  tr_noise.c  tr_public.h  tr_types.h
code/rendererjs/: qgl.h  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_dsa.c  tr_dsa.h  tr_extensions.c  tr_fbo.c  tr_glsl.c  tr_image.c  tr_image_dds.c  tr_init.c  tr_light.c  tr_local.h  tr_model.c  tr_scene.c  tr_shade.c  tr_shader.c  tr_surface.c  tr_vbo.c
code/renderervk/: qgl.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_font.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_world.c  vk.c  vk.h  vk_flares.c  vk_vbo.c
code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_glw.h  sdl_icon.h  sdl_input.c  sdl_snd.c
code/server/: CMakeLists.txt  server.h  sv_bot.c  sv_bsp_mini.c  sv_ccmds.c  sv_client.c  sv_filter.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_rankings.c  sv_record_common.c  sv_record_convert.c  sv_record_local.h  sv_record_main.c  sv_record_spectator.c  sv_record_writer.c  sv_snapshot.c  sv_world.c  tlds.h
code/ui/: ui_public.h
code/unix/: CMakeLists.txt  linux_glimp.c  linux_joystick.c  linux_local.h  linux_qgl.c  linux_qvk.c  linux_signals.c  linux_snd.c  quake3_flat.icns  unix_glw.h  unix_main.c  unix_shared.c  x11_dga.c  x11_randr.c  x11_vidmode.c
code/wasm/: dlmalloc.c  emscripten.h  gl.h  glext.h  index.css  index.html  khrplatform.h  sbrk.c  setjmp.h  sys_emgl.js  sys_idbfs.js  sys_net.js  sys_std.js  sys_wasm.js  sys_web.js  wasi-helpers.h  wasm.syms  wasmgl.syms
code/win32/: CMakeLists.txt  glw_win.h  q3.manifest  resource.h  win_gamma.c  win_glimp.c  win_input.c  win_local.h  win_main.c  win_minimize.c  win_qgl.c  win_qvk.c  win_resource.rc  win_shared.c  win_snd.c  win_syscon.c  win_wndproc.c  winquake.res
code/xquakejs/: README.md  package.json  sys_browser.js  sys_common.js  sys_files.js  sys_input.c  sys_input.js  sys_loadlib.h  sys_local.h  sys_main.c  sys_main.js  sys_net.js
(+361 files in other folders)
