add_library(renderer2 STATIC
	tr_animation.c
	tr_backend.c
	tr_bsp.c
	tr_cmds.c
	tr_curve.c
	tr_dsa.c
	tr_extensions.c
	tr_extramath.c
	tr_fbo.c
	tr_flares.c
	tr_glsl.c
	tr_image.c
	tr_image_dds.c
	tr_init.c
	tr_light.c
	tr_main.c
	tr_marks.c
	tr_mesh.c
	tr_model.c
	tr_model_iqm.c
	tr_postprocess.c
	tr_scene.c
	tr_shade.c
	tr_shade_calc.c
	tr_shader.c
	tr_shadows.c
	tr_sky.c
	tr_surface.c
	tr_vbo.c
	tr_world.c
	)
